# TPProject

./: gs3.cpp  gs3333.cpp
SessionFeature/: CMakeLists.txt  main.cpp
SessionFeature/header/: reciver.h
SessionFeature/src/: reciver.c
bt1/: CMakeLists.txt  main.cpp
bt7/: CMakeLists.txt  bluetoothformatimage.cpp  bluetoothformatimage.h  client.cpp  client.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  remoteselector.cpp  remoteselector.h  remoteselector.ui  screenshots.cpp  screenshots.h  screenshots.ui  server.cpp  server.h
bt8/: CMakeLists.txt  client.cpp  client.h  server.cpp  server.h
build-SessionFeature-Desktop_Qt_5_15_2_GCC_64bit-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-SessionFeature-Desktop_Qt_5_15_2_GCC_64bit-Debug/SessionFeature_autogen/: deps
build-SessionFeature-Desktop_Qt_5_15_2_GCC_64bit-Debug/mytread_autogen/: deps  moc_predefs.h
build-SessionFeature-Desktop_Qt_5_15_2_GCC_64bit-Debug/reciver_autogen/: deps
client/: CMakeLists.txt
client/include/: Authorization.h  Messeger.h  Registration.h  SessionManager.h
client/sources/: Authorization.cpp  Authorization.ui  Messeger.cpp  Messeger.ui  Registration.cpp  Registration.ui  SessionManager.cpp  main.cpp
gstreamer_interface/: CMakeLists.txt
gstreamer_interface/include/: Receiver.h  Session.h  SessionManager.h  Transmiter.h  reciver.h  session_manager.h  transmmiter.h
gstreamer_interface/sources/: Reciver.cpp  Session.cpp  SessionManager.cpp  Transmiter.cpp  reciver.cpp  session_manager.cpp  tranmiter.cpp
gstreamer_interface/tests/: tests.cpp
server/: CMakeLists.txt
server/include/: AuthServer.h  MessageServer.h  ServerBase.h  ServerManager.h
server/sources/: AuthServer.cpp  MessageServer.cpp  ServerBase.cpp  ServerManager.cpp  main.cpp
